k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # tells kuberenetes that we'd like to add ingress controller based on the nginx project
    kubernetes.io/ingress.class: nginx
    # define how the copy of nginx behaves - after deciding to send to the server remove the /api
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # tells nginx to work with https
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    # make sure that nginx forces users to use https
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - k8s-multi.com
        - www.k8s-multi.com
      secretName: k8s-multi.com
  rules:
    - host: k8s-multi.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
    - host: www.k8s-multi.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
